<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".LoginActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <ImageView
        android:id="@+id/imgDog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dogbanner" />

    <LinearLayout
        android:id="@+id/section"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/fondoblanco"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="70dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="343dp" />


            <Button
                android:id="@+id/btn_apple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/apple"
                android:text="@string/apple"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
                app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                app:layout_constraintTop_toTopOf="parent" />
            <Button
                android:id="@+id/btn_facebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/black"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/facebook"
                android:text="@string/facebook"
                app:layout_constraintTop_toBottomOf="@id/btn_apple"
                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
                app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                />
            <Button
                android:id="@+id/btn_google"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/black"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/google"
                android:text="@string/google"
                app:layout_constraintTop_toBottomOf="@id/btn_facebook"
                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
                app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                />
            <Button
                android:id="@+id/btn_instagram"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/black"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/instagram"
                android:text="@string/instagram"
                app:layout_constraintTop_toBottomOf="@id/btn_google"
                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
                app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/text_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sub_title"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>